kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phonebook-app
spec:
  selector:
    app: phonebook-app
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: NodePort
